--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 /* Generic Design */
@@ -29,6 +31,44 @@ p {
     font-size: 18px;
     font-weight: 500;
     color:rgb(82, 81, 81);
+}
+
+/* HEADER SECTION */
+
+header {
+    height: 60px;
+    padding-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #ff8c42;
+} 
+header h4 {
+    display: inline;
+    color: #4e598c;
+    font-size: 20px;
+    margin-left: 40px;
+    margin-top: -15px !important;
+}
+header h4 span {
+    color: white;
+}
+.menu-list ul {
+    margin-top: -5px;
+    display: flex;
+    list-style: none;
+    margin-right: 40px;
+}
+.menu-list ul li a {
+    text-decoration: none;
+    color: white;
+    margin: 0 20px;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 0 5px;
+}
+.menu-list ul li a:hover {
+    padding-bottom: 34px;
+    border-bottom: 7px solid #4e598c;
 }
 
 /* BANNER SECTION */
@@ -136,4 +176,19 @@ p {
     width: 80%;
     margin-left: 25px;
     text-align: justify;
+}
+
+footer {
+    color: white;
+    height: 200px;
+    margin-top: 70px;
+    padding-top: 40px;
+    text-align: center;
+    background-color: #4e598c;
+}
+footer span {
+    color: #ff8c42;
+}
+footer p {
+    color: black;
 }
