--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header h4 span {
 .recipe .recipe--item {
     margin-right: 80px;
     border-radius: 30px;
-    box-shadow: 3px 3px 5px 6px #ccc;;  
+    box-shadow: 3px 3px 5px 6px #ccc;  
 }
 .recipe .recipe--item:last-child {
     margin-right: 0;
@@ -178,10 +178,31 @@ header h4 span {
     text-align: justify;
 }
 
+/* DEMOGRAPHY SECTION */
+.demography {
+    margin: 70px 40px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 2px 2px 4px 5px #ccc;;  
+}
+.demography-item {
+    padding: 40px;
+    height: 120px;
+    text-align: center;
+    margin: 0 40px;
+}
+.demography-item:last-child {
+    margin-left: 40px;
+}
+.demography-item h3 {
+    font-size: 24px;
+}
+
 footer {
     color: white;
-    height: 200px;
-    margin-top: 70px;
+    height: 230px;
+    margin-top: 100px;
     padding-top: 40px;
     text-align: center;
     background-color: #4e598c;
@@ -190,5 +211,5 @@ footer span {
     color: #ff8c42;
 }
 footer p {
-    color: black;
+    color: #f9c784;
 }
